# smith

./: .gitattributes  Cargo.toml  README.md  smith_tui.py
.github/workflows/: ci.yml  release.yml
docs/: ANALYSIS_REPORT.md
roles/: architect.md  assurance.md  designer.md  developer.md  devops.md  planner.md  producer.md
scripts/: bump-version.sh  check-docker.sh  list-agents.sh  validate.sh
smith_tui/: Cargo.toml
smith_tui/src/: main.rs
src/: agent.rs  dagger_pipeline.rs  docker.rs  github.rs  main.rs
src/commands/: agent.rs  mod.rs  model.rs  project.rs  role.rs  run.rs  system.rs
src/commands/agent/: lifecycle.rs
src/commands/agent/pipeline/: mod.rs
src/commands/agent/pipeline/stages/: develop.rs  mod.rs  plan.rs  release.rs  review.rs
src/commands/pipeline/: mod.rs
src/commands/pipeline/stages/: develop.rs  plan.rs  release.rs  review.rs
src/docker/: agent_runtime.rs  model_runtime.rs
src/tui/: app.rs  db.rs  mod.rs  state.rs  validation.rs
src/tui/panels/: agents.rs  dashboard.rs  mod.rs  pipelines.rs  projects.rs
