[package]
name = "smith"
version = "0.2.0"
edition = "2021"
authors = ["Jacob D. Harrison"]
description = "Agent Smith — open-source control plane for coding orchestration and configuration"
license = "MIT"
rust-version = "1.83"

[dependencies]
clap = { version = "4", features = ["derive"] }
dagger-sdk = "0.19"
directories = "6"
dirs = "5"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"

